--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -11,7 +11,7 @@
     <label for="exampleFormControlTextarea1">Body</label>
     <textarea class="form-control" name="todo[body]" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn btn-primary">Create New Todo</button>
  
   </form>
 <% end %>
